# Compass

./: COPYING  autogen.sh  configure.ac
data/: Makefile.am  app-menu.ui  ca.reyad.Compass.appdata.xml.in  ca.reyad.Compass.busname  ca.reyad.Compass.data.gresource.xml  ca.reyad.Compass.desktop.in  ca.reyad.Compass.gschema.xml  main.ui  net.hadess.SensorProxy.xml
docs/: Rsvg.DimensionData-em.page  Rsvg.DimensionData-ex.page  Rsvg.DimensionData-height.page  Rsvg.DimensionData-width.page  Rsvg.DimensionData.page  Rsvg.Error.page  Rsvg.Error.quark.page  Rsvg.Handle-base-uri.page  Rsvg.Handle-desc.page  Rsvg.Handle-dpi-x.page  Rsvg.Handle-dpi-y.page  Rsvg.Handle-em.page  Rsvg.Handle-ex.page  Rsvg.Handle-flags.page  Rsvg.Handle-height.page  Rsvg.Handle-metadata.page  Rsvg.Handle-title.page  Rsvg.Handle-width.page  Rsvg.Handle.close.page  Rsvg.Handle.get_base_uri.page  Rsvg.Handle.get_dimensions.page  Rsvg.Handle.get_dimensions_sub.page  Rsvg.Handle.get_pixbuf.page  Rsvg.Handle.get_pixbuf_sub.page  Rsvg.Handle.get_position_sub.page  Rsvg.Handle.has_sub.page  Rsvg.Handle.new.page  Rsvg.Handle.new_from_data.page  Rsvg.Handle.new_from_file.page  Rsvg.Handle.new_from_gfile_sync.page  Rsvg.Handle.new_from_stream_sync.page  Rsvg.Handle.new_with_flags.page  Rsvg.Handle.page  Rsvg.Handle.read_stream_sync.page  Rsvg.Handle.render_cairo.page  Rsvg.Handle.render_cairo_sub.page  Rsvg.Handle.set_base_gfile.page  Rsvg.Handle.set_base_uri.page  Rsvg.Handle.set_dpi.page  Rsvg.Handle.set_dpi_x_y.page  (+12 more)
src/: Makefile.am  ca.reyad.Compass.in  ca.reyad.Compass.src.gresource.xml  compass.js  compass.src  main.js  window.js
